JsonLdTreeReader fixes